--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
 
         // 圖片清單 (修改為本地相對路徑，請確保這些圖片檔案存在於 images/ 資料夾中)
         const images = [
-            { url: './images/image_1.jpg', title: '本地測試圖 一' },
-            { url: './images/image_2.jpg', title: '本地測試圖 二' },
-            { url: './images/image_3.jpg', title: '本地測試圖 三' },
-            { url: './images/image_4.jpg', title: '本地測試圖 四' }
+            { url: 'https://olliechiou762-ai.github.io/234/images/img_1.jpg', title: '本地測試圖 一' },
+            { url: 'https://olliechiou762-ai.github.io/234/images/img_2.jpg', title: '本地測試圖 二' },
+            { url: 'https://olliechiou762-ai.github.io/234/images/img_3.jpg', title: '本地測試圖 三' },
+            { url: 'https://olliechiou762-ai.github.io/234/images/img_4.jpg', title: '本地測試圖 四' }
         ];
 
         let currentImageIndex = 0;
